--- a/style.css
+++ b/style.css
@@ -213,8 +213,13 @@ body {
 /* Media Query */
 
 @media (max-width: 1350px) {
-  #title,
+
+  #title {
+    text-align: center;
+  }
+
   .title-heading {
+    font-size: 2.5rem;
     text-align: center;
   }
 
