--- a/style.css
+++ b/style.css
@@ -218,7 +218,8 @@ body {
     text-align: center;
   }
 
-  .title-heading {
+  .title-heading,
+  .cta-heading {
     font-size: 2.5rem;
     text-align: center;
   }
@@ -226,5 +227,9 @@ body {
   .title-image {
     position: static;
     transform: rotate(0);
+  }
+
+  .testimonial-text {
+    font-size: 2rem;
   }
 }
