--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body {
 
 .carousel-item {
   padding: 7% 15%;
-  transition-duration: 5s;
+  transition-duration: 1s;
 }
 
 /* Press Section */
@@ -200,14 +200,14 @@ body {
 
 .footer-links {
   color: #55ACEE;
-  height: 30px;
+  height: 25px;
   margin: 5px;
   text-decoration: none;
-  width: 30px;
+  width: 25px;
 }
 
 .footer-copyright {
-  margin-top: 20px;
+  margin-top: 7px;
 }
 
 /* Media Query */
@@ -226,7 +226,8 @@ body {
 
   .title-image {
     position: static;
-    transform: rotate(0);
+    padding-top: 7%;
+    transform: rotate(15deg);
   }
 
   .testimonial-text {
